# World

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  EventHandler.hpp  Scene.hpp  ViewController.hpp  World.cpp  World.hpp  main.cpp
src/components/: CollisionDetection.hpp  Component.cpp  Component.hpp  ComponentDescriptor.hpp  ComponentManager.cpp  ComponentManager.hpp  DraggableComponent.hpp  QuadrangleComponent.cpp  QuadrangleComponent.hpp  RectangleComponent.hpp
src/grid/: AreaSelector.hpp  Grid.cpp  Grid.hpp  GridSpacing.hpp  Node.hpp  Rhombus.hpp
src/utils/: Point.hpp  Round.hpp
